sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/Merchant_Pop_Up_Response__c.object-meta.xml
<CustomObject>
    <description>LEM-1979: Object to capture the Pop-Up responses of the Merchant before filling out Nintex based Use Case forms.</description>
    <label>Franchise Form Request</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Merchant Pop-Up Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Franchise Form Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>