sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Allow_Mx_to_enter_custom_delivery_radius__c.field-meta.xml
<CustomField>
    <fullName>Allow_Mx_to_enter_custom_delivery_radius__c</fullName>
    <description>LEM-5189: Allow Mx to enter their own custom delivery radius</description>
    <label>Allow Mx to enter custom delivery radius</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>