sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Allow_Mx_to_enter_minimum_prep_time__c.field-meta.xml
<CustomField>
    <fullName>Allow_Mx_to_enter_minimum_prep_time__c</fullName>
    <description>LEM-5189: Allow Mx to enter their own minimum prep time</description>
    <label>Allow Mx to enter minimum prep time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>