sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Allow_Optional_Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Allow_Optional_Product_Selection__c</fullName>
    <description>LEM-2734: Does your Mx MSA allow for optional Product Selection</description>
    <inlineHelpText>Does your Mx MSA allow for optional Product Selection?</inlineHelpText>
    <label>Allow Optional Product Selection?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>