sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Applies_to_all_franchise_of_a_given_Corp__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_all_franchise_of_a_given_Corp__c</fullName>
    <description>LEM-2504: Captures the decision to generate Negotiating Opportunities against the selected list of Franchise accounts.</description>
    <label>Applies to all Franchise of a given Corp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>