sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Are_Hours_of_Operation_Required__c.field-meta.xml
<CustomField>
    <fullName>Are_Hours_of_Operation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1979: Captures the decision if Hours of Operation are required or not.</description>
    <label>Are Hours of Operation Required?</label>
    <type>Checkbox</type>
</CustomField>