sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Are_Parking_Instructions_Required__c.field-meta.xml
<CustomField>
    <fullName>Are_Parking_Instructions_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1979: Captures decision if Parking Arrival Instructions would be required or not.</description>
    <label>Are Parking Instructions Required?</label>
    <type>Checkbox</type>
</CustomField>