sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Are_Pickup_Instructions_Required__c.field-meta.xml
<CustomField>
    <fullName>Are_Pickup_Instructions_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1979: Captures the decision if In-Store Pickup Instructions are required.</description>
    <label>Are Pickup Instructions Required?</label>
    <type>Checkbox</type>
</CustomField>