sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>LEM-3211: It stores the Brand value selected by the user on Generate Franchise Form pop-up.</description>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>