sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16820: It stores the Business ID onto which the franchisee should be onboarded.</description>
    <inlineHelpText>Input the Business ID onto which the franchisee should be onboarded. Leave blank if a new Business ID should be created for the franchisee.</inlineHelpText>
    <label>Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>