sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Business_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-11257: It is used to associate the Business Vertical to a Merchant Popup.</description>
    <label>Business Vertical</label>
    <referenceTo>Business_Vertical__c</referenceTo>
    <relationshipLabel>Franchise Form Requests</relationshipLabel>
    <relationshipName>Franchise_Form_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>