sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Check_COO_Exception_Email_List_Updated__c.field-meta.xml
<CustomField>
    <fullName>Check_COO_Exception_Email_List_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-5305: It used to update the latest COO exception email list.</description>
    <label>Check COO Exception Email List Updated</label>
    <type>Checkbox</type>
</CustomField>