sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Closed_Date_for_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_for_Opportunities__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>This will be the date by which all Merchants should fill out the Nintex by</inlineHelpText>
    <label>Closed Date for Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>120 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>