sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Collect_last_4_digits_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Collect_last_4_digits_of_SSN__c</fullName>
    <description>LEM-13737: Configure collection for Last 4 digits of SSN for Alcohol and Cannabis Mxs in Nintex form</description>
    <label>Collect last 4 digits of SSN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>