sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1979: Lookup To Contract</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Franchise Form Requests</relationshipLabel>
    <relationshipName>Merchant_Pop_Up_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>