sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>LEM-3214: It is used in the approval email template to show the contract number.</description>
    <formula>Contract__r.ContractNumber</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>