sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/COO_Exception_Log_Queue_Member_Emails__c.field-meta.xml
<CustomField>
    <fullName>COO_Exception_Log_Queue_Member_Emails__c</fullName>
    <description>LEM-5305: This is used to store the list of emails in a string format for the user in the queue called &apos;Nintex COO Store No Match Exception Log&apos;.</description>
    <label>COO Exception Log - Queue Member Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>