sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>LEM-1979: Country of Corporate Account</description>
    <formula>TEXT(Mx_Corporate_Account__r.BillingCountryCode)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>