sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Create_Opportunity_Closed_Won_Stage__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity_Closed_Won_Stage__c</fullName>
    <description>LEM-2536: It allows end-user to decide whether Opportunity should be created in Closed Won or Contracting.</description>
    <inlineHelpText>Do you want the opportunity to be created in &quot;Closed/Won&quot; stage?</inlineHelpText>
    <label>Create Opportunity in &quot;Closed/Won&quot; Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>