sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Custom_notes_for_manual_activation__c.field-meta.xml
<CustomField>
    <fullName>Custom_notes_for_manual_activation__c</fullName>
    <description>LEM-2297: Captures activation notes which entered by Mx</description>
    <label>Custom notes for manual activation</label>
    <type>TextArea</type>
</CustomField>