sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Default_POS_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_POS_Integration_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-8774-Used to store Default POS Integration ID field.</description>
    <label>Default POS Integration ID?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>