sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Delay_Tablet_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Delay_Tablet_Shipment__c</fullName>
    <label>Delay Tablet Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>