sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Developer_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_ID__c</fullName>
    <description>LEM-3006: Represents the Drive Developer ID for the business or channel partner.</description>
    <label>Select Developer ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Developer_Id</valueSetName>
    </valueSet>
</CustomField>