sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Disable_COO_submission__c.field-meta.xml
<CustomField>
    <fullName>Disable_COO_submission__c</fullName>
    <description>LEM-11069: Disable COO for certain brands through Nintex, to encourage Merchants to use the Mx Portal COO process.</description>
    <label>Disable COO submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>