sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Disable_Mx_Form_Submission_For_This_URL__c.field-meta.xml
<CustomField>
    <fullName>Disable_Mx_Form_Submission_For_This_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-5674: Captures the decision if Nintex form is expired or not.</description>
    <label>Disable Mx form submission for this URL</label>
    <type>Checkbox</type>
</CustomField>