sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Do_you_need_to_track_Nintex_responses__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_to_track_Nintex_responses__c</fullName>
    <description>LEM-2974: It allows end-user to decide whether nintex responses should be tracked or not</description>
    <label>Do you need to track Nintex responses?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>