sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Encrypted_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-2133: Stores the encrypted form of the Salesforce Record Id. The encrypted form is necessary to add the record identifier in a URL parameter that is publicly available.</description>
    <label>Encrypted Record Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>