sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/External_Business_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Business_Id__c</fullName>
    <description>LEM-2486: Captures Mx name that will be used in API.</description>
    <inlineHelpText>Mx name that will be used in API.</inlineHelpText>
    <label>External Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>