sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Form_Language__c.field-meta.xml
<CustomField>
    <fullName>Form_Language__c</fullName>
    <description>LEM-1979: Captures the language in which the user wants the form to be generated.</description>
    <label>Form Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>