sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Franchise_Account__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1979: Franchise Account to be selected by the user.</description>
    <label>Franchise Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Franchisee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant Pop-Up Responses (Franchise Account)</relationshipLabel>
    <relationshipName>Merchant_Pop_Up_Responses1</relationshipName>
    <type>Lookup</type>
</CustomField>