sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Ingest_submission_as_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Ingest_submission_as_Closed_Won__c</fullName>
    <description>LEM-2536: It allows end-user to decide whether Opportunity should be created in Closed Won or Contracting.</description>
    <label>Ingest submission as “Closed/Won”?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>