sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Invoice_Payment_Account_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Account_Record_Type_Id__c</fullName>
    <description>LEM-3946: It is used to store Invoice Payment Account record type id.</description>
    <label>Invoice Payment Account Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>