sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Centrally_Activated__c.field-meta.xml
<CustomField>
    <fullName>Is_Centrally_Activated__c</fullName>
    <description>LEM-1979: Captures the decision if the Merchant should be activated centrally or not.</description>
    <label>Is Centrally Activated?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>