sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_each_Franchise_having_own_Brand__c.field-meta.xml
<CustomField>
    <fullName>Is_each_Franchise_having_own_Brand__c</fullName>
    <description>LEM-5399: It is used to indicate if each Franchise will have its own Brand.</description>
    <label>Let each Franchise select their brand?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>