sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Evening_Delivery_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Evening_Delivery_Required__c</fullName>
    <description>LEM-1979: Captures the decision if Evening Delivery is required or not.</description>
    <label>Is Evening Delivery Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>