sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Marketing_Kit_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Marketing_Kit_Required__c</fullName>
    <description>LEM-1979: Captures the decision if Marketing Kit is required or not. This would not be required during a Rate Change or Product Addition</description>
    <label>Is Marketing Kit Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>