sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Marketplace_Alcohol_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Is_Marketplace_Alcohol_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3501: Captures decision based on available Alcohol subscriptions on Contract.</description>
    <label>Is Marketplace Alcohol Subscription?</label>
    <type>Checkbox</type>
</CustomField>