sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Menu_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Menu_Information_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1979: Based on input decides if the Menu Information of the Merchant is required or not.</description>
    <label>Is Menu Information Required</label>
    <type>Checkbox</type>
</CustomField>