sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Mx_having_more_than_one_brand__c.field-meta.xml
<CustomField>
    <fullName>Is_Mx_having_more_than_one_brand__c</fullName>
    <description>LEM-5399: It is used to indicate if the Mx is having more than one Brand or not.</description>
    <label>Does your Mx Group have multiple brands?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>