sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_Payment_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Information_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2630: Captures decision based on available CoD subscriptions on Contract.</description>
    <label>Is Payment Information Required?</label>
    <type>Checkbox</type>
</CustomField>