sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_this_form_request_for_Self_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Is_this_form_request_for_Self_Delivery__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-9141-Add Self-Delivery option on Mx Popup for Marketplace.</description>
    <label>Is this form request for Self-Delivery?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>