sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Is_this_Rate_Change_or_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Rate_Change_or_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1979: Captures if the user needs a Rate Change or Amendment.</description>
    <label>Is this Rate Change or Amendment</label>
    <type>Checkbox</type>
</CustomField>