sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Menu_Setup_Method__c.field-meta.xml
<CustomField>
    <fullName>Menu_Setup_Method__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-7310- Used to store Menu setup method on the account.</description>
    <label>Menu Setup Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ask Merchant to input</fullName>
            </value>
            <value>
                <fullName>Clone Existing Menu(s)</fullName>
            </value>
            <value>
                <fullName>Link to Existing Menu(s)</fullName>
            </value>
            <value>
                <fullName>None - Menu Setup Complete</fullName>
                <isActive>false</isActive>
                <label>None - Menu Setup Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>