sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Menu_To_Be_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Menu_To_Be_Completed_By__c</fullName>
    <description>LEM-1979: Captures the entity which needs to complete Menu.</description>
    <label>Menu To Be Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoorDash Onboarding Team</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>None - Menu Setup Complete</fullName>
                <isActive>false</isActive>
                <label>None - Menu Setup Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>