sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Menu_UI_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_UI_Type__c</fullName>
    <description>LEM-1979: The UI Type for Merchant&apos;s Menu display.</description>
    <label>Menu UI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Not applicable for this scenario</fullName>
                <isActive>false</isActive>
                <label>Not applicable for this scenario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>