sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-7310 - Displays the field to input the URL if “Link to Existing Menu(s)” or “Clone Existing Menu(s)” option is selected</description>
    <label>Menu URL</label>
    <type>Url</type>
</CustomField>