sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Mx_Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Mx_Corporate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1979: Merchant Corporate Account.</description>
    <label>Mx Corporate Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant Pop-Up Responses</relationshipLabel>
    <relationshipName>Merchant_Pop_Up_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>