sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Mx_Portal_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Mx_Portal_Name_Format__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16823:  Mx Portal Name format field is added to the Merchant Pop-Up to select the pattern that should appear on the &quot;Alternative Store Name (Mx Portal)&quot; in the store account.</description>
    <label>Mx Portal Name Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[Brand] - ([MSID])</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>